# CMakeList.txt: проект CMake для oop_exercise_03; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("oop_exercise_03")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (oop_exercise_03 "oop_exercise_03.cpp" "oop_exercise_03.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
